--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
   }
 
 
@@ -11,21 +12,15 @@
     user-select: none;
   }
 
-
-  .hidden {
-
-    display: none;
-  }
-  
-
   .generic_Button {
 
     color: white;
     width: max-content;
     
-    font-size: 21px;
+    font-size: clamp(0.5rem, 3.4vw, 2rem);
     border: none;
-    border-radius: 25px;
+    padding: clamp(5px, 1vw, 25px) clamp(10px, 1.4vw, 50px);
+    border-radius: 50px;
     font-weight: bold;
     background: #00b2d6;
     background: linear-gradient(220deg, rgb(34, 194, 226) 8%, rgb(0, 106, 192) 98%);
@@ -34,7 +29,7 @@
   .generic_Button a{
 
     display: inline-block;
-    padding: 15px 20px;
+    padding: 1.2vh 1vw;
     width: 100%;
     height: 100%;
     text-decoration: none;
@@ -51,33 +46,236 @@
 
   header {
 
-    
-    /* background-image: url(https://media.istockphoto.com/id/1162898563/photo/chicago-urban-skyscrapers-usa.jpg?s=1024x1024&w=is&k=20&c=SPcplbsuxJeRrFnVi82OHSf8tvjayNEjDuyu67g5Zdw=); */
-    background-color: black;
-    background-size: cover;
-    background-position: 100% 30%;
+    /* height: clamp(80px, 10vh, 150px); */
+    display: flex;
+    height: max-content;
+    justify-content: center;
+    /* background-color: rgb(255, 0, 0); */
+
   }
+
+  .closeBtn{
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: clamp(30px, 8vw, 35px);
+    width: clamp(30px, 8vw, 35px);
+    background-color: #2b2b2b;
+    border:3px #12bbf8 solid;
+    border-radius: 50px;
+    transform: translate(50%, -50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+}
+
+.closeBtn img{
+
+    height: 90%;
+    width: 90%;
+    transition: all 500ms ease-in-out;
+ 
+}
+
+.closeBtn:hover, .closeBtn:hover img {
+
+    cursor:pointer;
+ 
+}
+
+.closeBtn:hover img {
+
+    transform: rotate(270deg);
+ 
+}
+
+.page_Background {
+
+    position: fixed;
+    width: 100vw;
+    height: 105vh;
+    background-color: rgba(37, 37, 37, 0.068);
+    background-blend-mode:color-dodge;
+    backdrop-filter: blur(10px);
+    z-index: -1;
+ 
+}
 
   /* nav bar */
 
   .top_Panel {
 
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: start;
     align-items: center;
-    padding: 20px 50px;
     width: 100vw;
-    height: 100px;
+    /* height: unset; */
+    /* height: clamp(20px, 10vh, 200px); */
+    /* height: clamp(20px, 8vh, 100px); */
+    
     max-width: 100%;
-    position: relative;
+    position: fixed;
+    top: 0;
     z-index: 5;
+
+    border: 0.2vh solid rgba(170, 170, 170, 0.788);
+    background-color: rgba(0, 0, 0, 0.616);
+    backdrop-filter: blur(10px);
+    border-radius: clamp(25px, 3.5vh, 40px);
+
+    /* flex-wrap:wrap; */
+    overflow: hidden;
+    transition: height 200ms ease;
+  
 
   }
 
+  .top_Panel.hamburger_Pressed {
+
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: start;
+    width: 100vw;
+    /* height: clamp(80px, 60vh, 450px); */
+    /* height: clamp(20px, 10vh, 200px); */
+    height: inherit;
+   
+    
+    max-width: 100%;
+    position: fixed;
+    top: 0;
+
+    border: 0.2vh solid rgba(170, 170, 170, 0.788);
+    background-color: rgba(0, 0, 0, 0.616);
+    backdrop-filter: blur(10px);
+    /* border-radius: 0; */
+    transition: height 200ms ease-out;
+    flex-wrap:wrap;
+  
+
+  }
+
+  .logo_And_Hamburger {
+
+    display: flex;
+    width: 100%;
+    padding: 5%;
+    height: clamp(20px, 8vh, 100px);
+    justify-content: space-between;
+    align-items: center;
+    position:relative;
+    top: 0;
+    
+  }
+
+  .navbarContainer {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+
+  /* hamburger button */
+
+  
+
+  .hamburger_Line {
+
+    height: 5px;
+    width: 100%;
+
+    border-radius: 100px;
+
+    
+
+  }
+  
+  .hamburger_Pressed > .hl1 {
+
+    transform: rotate(45deg);
+    /* width: calc(1.4 * 33.5px); */
+    transform-origin: left;
+    translate: 15% 23%;
+
+  }
+
+  .hamburger_Pressed > .hl2 {
+
+    background: transparent;
+  }
+
+  .hamburger_Pressed  .hl_Piece1 {
+
+    transform: translateX(-150%);
+
+  }
+
+  .hamburger_Pressed  .hl_Piece2 {
+
+    transform: translateX(150%);
+
+  }
+
+  .hamburger_Pressed > .hl3 {
+
+    transform: rotate(-45deg);
+    transform-origin: left;
+    translate: 15% -23%;
+  }
+  
+  .hl1 {
+    background: #00b2d6;
+    transition: all 200ms ease-in;
+
+  }
+
+  .hl2 {
+    
+  display: flex;
+  background-color: #00b2d6;
+  transition: all 200ms ease-in;
+
+
+  }
+
+  .hl_Piece1 {
+
+    
+    width: 50%;
+    height: 100%;
+    border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
+    background: #00b2d6;
+    transition: all 100ms ease-in;
+  }
+  .hl_Piece2 {
+
+    width: 50%;
+    height: 100%;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    background: #00b2d6;
+    transition: all 100ms ease-in;
+  }
+
+  .hl3 {
+    background: #00b2d6;
+    transition: all 200ms ease-in;
+
+  }
+
+
+
   .header_Logo {
 
-    width: 2vw;
-    height: 2vw;
+    width: 3vw;
+    height: 3vw;
     max-width: 4vw;
     max-height: 4vw;
     border-radius:100%;
@@ -86,52 +284,75 @@
     
   }
 
- 
+  .navbarToggleBtn {
 
+    height: 33px;
+    width: 33px;
+    display: flex;
+    padding: 4px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    overflow: hidden;
+    
+
+  }
+
+  /* Navbar */
+ 
   .global_Nav {
-    border: 1px solid rgba(170, 170, 170, 0.788);
-    width: 700px;
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.616);
-    backdrop-filter: blur(10px);
-    border-radius: 90px;
-    flex-grow: 0.3;
+
+    border: unset;
+    background-color:unset;
+    backdrop-filter: unset;
+    border-radius: unset;
+
+    width: 100%;
+    height: clamp(40px, 40vh, 220px);
+    
     /* max-width: 80%; */
     margin: 0 auto;
-    position:fixed;
-    top: 50px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position:static;
+    top: unset;
+    left: unset;
+    transform: unset;
+    
     
   }
+
 
   .nav_List {
 
     display: flex;
-    justify-content: space-around;
-    min-width: fit-content;
-    max-width: 100%;
-    height: 100%;
+    flex-flow: column;
+    height: clamp(40px, 40vh, 220px);
+    justify-content: space-between;
     align-items: center;
+    
     list-style-type: none;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: clamp(0.5rem, 5vw, 1.5rem);
+    
   }
 
   .nav_Link {
+    width: 100%;
     height: 100%;
     text-decoration: none;
     color: rgb(255, 255, 255);
+    
   }
 
   .nav_List a {
 
     height: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
     text-decoration: none;
     color: rgb(255, 255, 255);
-
+    text-align: center;
     transition: 200ms;
   }
 
@@ -165,8 +386,10 @@
   .footer_Div {
 
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
-    align-items: baseline;
+    align-items: center;
+    gap: 5vh;
 
     background-color: rgb(17, 17, 17);
 
@@ -174,35 +397,58 @@
     padding: 5vh 20px;
 
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
+    font-size: clamp(0.5rem, 0.5rem + 4vw, 1.5rem);
     color: rgb(126, 126, 126);
   }
 
   .footer_Column {
 
-    max-width: 310px;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer_Column h4 {
+
+        text-align: center;
+  }
+
+
+
+  .address_Column {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2vh;
   }
 
   .footer_Column ul {
 
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2vh;
   }
 
   .footer_Logo {
 
     float: left;
-    height: 110px;
+    height: 10vh;
     width: auto;
     margin-right: 8px;
 
+  }
+
+  .footer_Column_Link {
+
+    text-align: left;
   }
 
   .footer-divider {
 
     background-color: #3a3838;
     width: 84vw;
-    height: 1px;
-
+    height: 0.4vh;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
@@ -212,25 +458,50 @@
   .footer_Div_Lower {
 
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 
+    gap: clamp(5px, 3vw, 20px);
+
     width: 84vw;
-    padding: 30px;
+    padding: 1.3vw;
+    padding-top: 1.3vh;;
     margin: 0 auto;
 
     background-color: rgb(17, 17, 17);
 
     color: rgb(150, 150, 150);
-    font-size: 21px;
+    font-size: clamp(0.5rem, 0.3rem + 3vw, 1.2rem);
     font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .copyright {
+
+    text-align: center;
+  }
+
+  .tos {
+
+    display: flex;
+    justify-content: space-evenly;
+    gap: 25px;
+  }
+
+  .description_Footer {
+
+    display: flex;
+    align-items: center;
+    text-align: center;
   }
 
   .footer_Icon_One, .footer_Icon_Two, .footer_Icon_Three {
 
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 1em;
+    height: 1em;
+    margin-right: 0.5vw;
     background-size:contain;
+    background-position: center;
 
 
   }
@@ -256,8 +527,9 @@
 
   .footer_Social_Icon {
 
-    height: 20px;
-    width: 20px;
+    width: clamp(15px, 5vw, 30px);
+    height: clamp(15px, 5vw, 30px);
+    margin-right: 0.5vw;
     background-size: cover;
 
   }
@@ -288,65 +560,422 @@
     background-color: #003f58;
   }
 
-  .tos {
 
-    display: flex;
-    gap: 25px;
+
+ 
+
+  @media (min-width: 1000px) {
+  
+    .generic_Button {
+  
+      color: white;
+      width: max-content;
+      
+      font-size: clamp(1rem, 1.25vw, 2.5rem);
+      border: none;
+      padding: 0.4vw 0.3vw;
+      border-radius: 2vw;
+      font-weight: bold;
+      background: #00b2d6;
+      background: linear-gradient(220deg, rgb(34, 194, 226) 8%, rgb(0, 106, 192) 98%);
+    }
+  
+    .generic_Button a{
+  
+      display: inline-block;
+      /* padding: 1.2vh 1vw; */
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      color: white;
+    }
+  
+    .generic_Button:hover {
+  
+      cursor: pointer;
+      background: #00b2d6;
+      background: linear-gradient(220deg, rgb(29, 165, 192) 8%, rgb(0, 91, 165) 98%);
+      
+    }
+
+    
+  
+    .header_Logo {
+  
+      width: clamp(80px, 1.5vw, 105px);
+      height: clamp(80px, 1.5vw, 105px);
+      border-radius:100%;
+      object-fit:cover;
+      transform: scale(1);
+      
+    }
+  
+   
+  
+    
+  
+    
+  
+    /* nav bar */
+
+  
+    .top_Panel {
+  
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0;
+      width: 95vw;
+      height: 100px;
+      /* height: 100px; */
+      /* height: 100px; */
+      max-width: 100%;
+      
+      z-index: 5;
+      margin: 1vh 0;
+
+      border: none;
+      background-color: 0;
+      backdrop-filter: none;
+      border-radius: 0;
+
+      position: relative;
+      top: 0px;
+      z-index: 5;
+      transform: unset;
+      transition: unset;
+
+
+    background-color: transparent;
+  
+    }
+
+    .logo_And_Hamburger {
+  
+      display: flex;
+      width: max-content;
+      padding: 10px;
+      height: clamp(80px, max-content, 200px);
+      justify-content: space-between;
+      align-items: center;
+      position:relative;
+      top: 0;
+      
+    }
+  
+
+    .navbarToggleBtn {
+  
+      display: none;
+      transform: unset;
+      transition: unset;
+      
+    }
+
+    .navbarContainer {
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+      justify-content: right;
+      align-items: center;
+      position: relative;
+      z-index: 5;
+      transform: unset;
+      transition: unset;
+    }
+  
+  
+    .global_Nav {
+
+      border: 0.2vh solid rgba(170, 170, 170, 0.788);
+      background-color: rgba(0, 0, 0, 0.616);
+      backdrop-filter: blur(10px);
+      border-radius: 90px;
+
+      
+      
+      /* max-width: 80%; */
+      width: clamp(400px, 35vw, 800px);
+      height: clamp(40px, 5vh, 70px);
+     
+      
+      flex-grow: 0.3;
+      /* max-width: 80%; */
+      margin: 0 auto;
+      position:fixed;
+      top: 50px;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      /* transform: none; */
+      z-index: 1000;
+      
+      
+    }
+
+  
+    .nav_Link {
+      height: 100%;
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+    }
+
+
+    .nav_List a {
+  
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      text-align: center;
+      transition: 200ms;
+    }
+  
+    .nav_Link:hover a{
+      cursor: pointer;
+      color: #00b2d6;
+    }
+  
+  
+    .nav_List {
+  
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      min-width: fit-content;
+      max-width: 100%;
+      height: 100%;
+      align-items: center;
+      list-style-type: none;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: clamp(1rem, 1vw, 3.5rem);
+
+    }
+
+  
+    .nav_Link {
+      height: 100%;
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+    }
+  
+    .nav_List a {
+  
+      height: 100%;
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+  
+      transition: 200ms;
+    }
+  
+    .nav_Link:hover a{
+      cursor: pointer;
+      color: #00b2d6;
+    }
+   
+   
+  
+
+  
+    /* Navbar */
+   
+   
+    /* footer */
+  
+    footer {
+      background-color: rgb(17, 17, 17);
+    }
+  
+    footer a {
+
+      text-decoration: none;
+      /* color: rgb(83, 165, 76); */
+      color: #008ca8;
+      transition: all 150ms ease;
+    }
+  
+    footer a:hover {
+  
+      color: #00b2d6;
+      
+    }
+  
+    .footer_Div {
+  
+      all: unset;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: baseline;
+  
+      background-color: rgb(17, 17, 17);
+  
+      border-top: 5px solid grey;
+      padding: 5vh 20px;
+  
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.2vw;
+      color: rgb(126, 126, 126);
+    }
+  
+    .footer_Column {
+  
+      all: unset;
+      max-width: 20%;
+    }
+  
+    .address_Column {
+      all: unset;
+      display: flex;
+      flex-direction: column;
+      gap: 0.2vh;
+    }
+
+
+    .footer_Column h4 {
+      text-align: unset;
+    }
+  
+    .footer_Column ul {
+  
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      gap: 0.2vh;
+    }
+  
+    .footer_Logo {
+  
+      float: left;
+      height: 10vh;
+      width: auto;
+      margin-right: 8px;
+  
+    }
+  
+    .footer_Column_Link {
+  
+      text-align: left;
+    }
+  
+    .footer-divider {
+  
+      background-color: #3a3838;
+      width: 84vw;
+      height: 0.4vh;
+  
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%);
+  
+    }
+  
+    .footer_Div_Lower {
+  
+      all: unset;
+      display: flex;
+      justify-content: space-between;
+  
+      width: 84vw;
+      padding: 1.3vw;
+      margin: 0 auto;
+  
+      background-color: rgb(17, 17, 17);
+  
+      color: rgb(150, 150, 150);
+      font-size: 1.2vw;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  
+    .description_Footer {
+  
+      display: flex;
+      align-items: center;
+    }
+  
+    .footer_Icon_One, .footer_Icon_Two, .footer_Icon_Three {
+  
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      margin-right: 0.5vw;
+      background-size:contain;
+      background-position: center;
+  
+  
+    }
+  
+    .footer_Icon_One {
+      background-image: url(../Images/Icons/location_on_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+    }
+  
+    .footer_Icon_Two {
+      background-image: url(../Images/Icons/phone_in_talk_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+    }
+  
+    .footer_Icon_Three {
+      background-image: url(../Images/Icons/mail_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+    }
+  
+    .social_Link {
+  
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+  
+    .footer_Social_Icon {
+  
+      width: 1.2vw;
+      height: 1.2vw;
+      margin-right: 0.5vw;
+      background-size: cover;
+  
+    }
+  
+    #soc_One {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/linkedin-svgrepo-com.svg);
+    }
+    #soc_Two {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/facebook-color-svgrepo-com.svg);
+    }
+    #soc_Three {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/instagram-svgrepo-com.svg);
+    }
+    #soc_Four {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/tiktok-svgrepo-com\(1\).svg);
+      background-color: #003f58;
+    }
+  
+    .tos {
+  
+      display: flex;
+      gap: 25px;
+    }
+
   }
 
-  /* @media screen {
-    
-    header {
+  @media (min-width: 1600px) {}
+  
 
-        height: 40vh;
-        background: black;
-        background-size: cover;
-        background-position: 100% 100%;
-        padding-top: 10px;
-      }
-    
-      .top_Panel {
-    
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0;
-        padding: 10px;
-        width: 100vw;
-        max-width: 100vw;
-        flex-wrap: wrap;
-    
-      }
-    
-     
-    
-      .global_Nav {
-        border: 2px solid rgb(182, 182, 182);
-        border-radius: 90px;
-        padding: 1vh;
-        margin: 0 auto;
-        flex-grow: 0.3;
-        max-width: 80%;
-        justify-self: right;
-      }
-    
-      .nav_List {
-    
-        display: flex;
-        justify-content: space-around;
-        min-width: fit-content;
-        max-width: 100%;
-        align-items: center;
-        list-style-type: none;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 20px;
-      }
-    
-      .nav_List a {
-    
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-      }
-    
+  
 
-  } */
+  .hidden {
+
+    display: none;
+  }
